# piefinder

./: .gitignore  authors.txt  pyproject.toml
docs/: readme.rst
docs/source/: api.rst  conf.py  index.rst  intro.rst
docs/source/modules/jax/: fitting.rst  functions.rst  jax.rst  models.rst  transforms.rst
examples/: README.rst  pca.yaml  plot_fit _a_spectrum.py  plot_fit.py  plot_grid.py  plot_pca.py  plot_simple_pie.py
piefinder/: __init__.py  model.py
piefinder/grid/: grid.py  priors.py
piefinder/jax/: __init__.py  config.py  fitting.py  functions.py  models.py  transforms.py
piefinder/pca/: __init__.py  linalg.py  pipeline.py
test/: test_jax_fitting.py  test_jax_functions.py  test_jax_models.py  test_jax_transforms.py  test_pca_linalg.py
