[project]
name = "piefinder"
authors = [
    {name = "Ted Johnson", email = "ted.johnson@unlv.edu"},
]
description = "Find the PIE."
readme = "docs/readme.rst"
repository = "https://github.com/VSPEC-collab/piefinder"

version = "0.1"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [

    ]
